; ModuleID = '/home/carl/AnghaBench/RetroArch/wiiu/extr_main.c___entry_menu.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wiiu/extr_main.c___entry_menu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @__entry_menu(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8**, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i8** %1, i8*** %4, align 8
  %6 = call i32 (...) @InitFunctionPointers()
  %7 = call i32 (...) @memoryInitialize()
  %8 = call i32 (...) @__init()
  %9 = call i32 (...) @fsdev_init()
  %10 = load i32, i32* %3, align 4
  %11 = load i8**, i8*** %4, align 8
  %12 = call i32 @main(i32 %10, i8** %11)
  store i32 %12, i32* %5, align 4
  %13 = call i32 (...) @fsdev_exit()
  %14 = call i32 (...) @__fini()
  %15 = call i32 (...) @memoryRelease()
  %16 = load i32, i32* %5, align 4
  ret i32 %16
}

declare dso_local i32 @InitFunctionPointers(...) #1

declare dso_local i32 @memoryInitialize(...) #1

declare dso_local i32 @__init(...) #1

declare dso_local i32 @fsdev_init(...) #1

declare dso_local i32 @main(i32, i8**) #1

declare dso_local i32 @fsdev_exit(...) #1

declare dso_local i32 @__fini(...) #1

declare dso_local i32 @memoryRelease(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
